# CaDiCaL_c

./: .gitmodules  CMakeLists.txt  build.sh  main.cpp
CaDiCaL/: CMakeLists.txt
CaDiCaL/src/: cadical.cpp  mobical.cpp
